# src/routes/getMusic.js
@@ -1,0 +1,15 @@
+import express from "express";
+const router = express.Router();
+import { PrismaClient } from "@prisma/client";
+const prisma = new PrismaClient();
+
+router.get("/get/music", async (req, res) => {
+  try {
+    const resMusic = await prisma.music.findMany();
+    res.status(200).json(resMusic);
+  } catch (error) {
+    res.status(400).json({ message: "algo deu errado!" });
+  }
+});
+
+export default router;
